# Izzy-Python

./: main.py  pyproject.toml  social_media_click.ipynb  social_media_click.py
.cache/replit/: __replit_disk_meta.json
Data Types/: augmented_assignment_operator.py  basic_functions.py  booleans.py  break_continue_pass.py  built_in_functions_and_methods.py  common_list_patterns.py  complex.py  conditional_logic.py  counter.py  data_types.py  default_parameters_keyword_arguments.py  dictionary.py  dictionary_keys.py  dictionary_method.py  dictionary_method2.py  enumerate.py  expressions_vs_statements.py  find_duplicates.py  first_gui.py  functions.py  hello.py  immutability.py  int_float.py  list_method3.py  list_methods.py  list_methods2.py  list_slicing.py  list_unpacking.py  lists.py  logical_operators.py  logical_operators_2.py  matrix.py  none.py  parameters_and_arguments.py  password_checker.py  polymorphism.py  range.py  sets.py  sets2.py  short_circuiting.py  (+11 more)
custom_tkinter/: app_functions.py  custom_tkinter_gui.py
